--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
 
   <title>فن التكلوجيا الحديث | كورسات مجانية و VIP - برامج مهكرة ومعدلة وقوالب وأدوات</title>
 
-  <!-- Meta أساسية -->
   <meta name="description" content="فن التكلوجيا الحديث: متجر كورسات مجانية و VIP، برامج تعليم، أدوات تكنولوجيا، برامج مهكرة ومعدلة للتجربة، قوالب جاهزة، سكربتات، سيرفرات، وثغرات تعليمية في مجال الأمن والحماية.">
   <meta name="keywords" content="فن التكلوجيا الحديث, متجر كورسات, كورسات مجانية, كورسات VIP, برامج تعليم, برامج مهكرة, برامج معدلة, برامج هكر, ثغرات تعليمية, قوالب جاهزة, قوالب بلوجر, سكربتات, أدوات اختراق تعليمية, أدوات تكنولوجيا, دورات برمجة, دورات تصميم, سيرفرات مدفوعة, سيرفرات IPTV, ذكاء اصطناعي, AI, ادوات هكر للتعليم, ادوات حماية, قنوات تيليجرام تعليمية">
   <meta name="author" content="Basm / فن التكلوجيا الحديث">
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-
-  <!-- Canonical -->
-  <link rel="canonical" href="https://basmali12.github.io/Mtgr2025/" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="فن التكلوجيا الحديث – كورسات، برامج، محتوى VIP">
@@ -22,8 +17,6 @@
   <meta property="og:image" content="https://k.top4top.io/p_3620yt6g21.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://basmali12.github.io/Mtgr2025/">
-  <meta property="og:site_name" content="فن التكلوجيا الحديث">
-  <meta property="og:locale" content="ar_AR">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -33,76 +26,6 @@
 
   <!-- Favicon -->
   <link rel="icon" href="https://k.top4top.io/p_3620yt6g21.jpg" type="image/jpeg">
-
-  <!-- Structured Data (WebSite) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "فن التكلوجيا الحديث",
-    "url": "https://basmali12.github.io/Mtgr2025/",
-    "inLanguage": "ar",
-    "potentialAction": {
-      "@type": "SearchAction",
-      "target": "https://basmali12.github.io/Mtgr2025/?q={search_term_string}",
-      "query-input": "required name=search_term_string"
-    }
-  }
-  </script>
-
-  <!-- Structured Data (فهرس الكورسات والمنتجات) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ItemList",
-    "name": "فهرس الكورسات والمنتجات في فن التكلوجيا الحديث",
-    "url": "https://basmali12.github.io/Mtgr2025/",
-    "itemListElement": [
-      {
-        "@type": "ListItem",
-        "position": 1,
-        "name": "كورسات برمجة وتطوير",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=programming"
-      },
-      {
-        "@type": "ListItem",
-        "position": 2,
-        "name": "تطبيقات وبرامج مهكرة للتجربة",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=apps"
-      },
-      {
-        "@type": "ListItem",
-        "position": 3,
-        "name": "سكربتات وأدوات هكر تعليمية",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=scripts"
-      },
-      {
-        "@type": "ListItem",
-        "position": 4,
-        "name": "قوالب جاهزة وتصميم مواقع",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=templates"
-      },
-      {
-        "@type": "ListItem",
-        "position": 5,
-        "name": "سيرفرات IPTV وأدوات البث",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=iptv"
-      },
-      {
-        "@type": "ListItem",
-        "position": 6,
-        "name": "أدوات الذكاء الاصطناعي (AI Tools)",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=ai"
-      },
-      {
-        "@type": "ListItem",
-        "position": 7,
-        "name": "كورسات أمن وحماية وثغرات تعليمية",
-        "url": "https://basmali12.github.io/Mtgr2025/?cat=security"
-      }
-    ]
-  }
-  </script>
 
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet" />
@@ -687,7 +610,12 @@
     <button class="filter-chip" data-filter="vip">VIP</button>
   </section>
 
-  <section class="products-grid" id="productsGrid"></section>
+  <!-- المنتجات + رسالة التحميل -->
+  <section class="products-grid" id="productsGrid">
+    <div id="loadingMsg" style="grid-column:1 / -1;font-size:12px;color:var(--muted);">
+      جاري تحميل المنتجات...
+    </div>
+  </section>
 
   <!-- فهرس المنتجات للتصدر في البحث -->
   <section id="coursesIndex">
@@ -980,20 +908,31 @@
     renderCoursesIndex();
   }
 
+  // ====== دالة عرض المنتجات مع فلترة مفتوح / VIP + إزالة رسالة التحميل ======
   function renderProducts(){
+    const loadingMsg = document.getElementById("loadingMsg");
+    if (loadingMsg) loadingMsg.remove();
+
     productsGrid.innerHTML = "";
     const filtered = products.filter(p => {
-      if(searchTerm){
+      // فلتر البحث
+      if (searchTerm) {
         const t = (p.title || "").toLowerCase();
         const c = (p.category || "").toLowerCase();
-        if(!t.includes(searchTerm) && !c.includes(searchTerm)) return false;
+        if (!t.includes(searchTerm) && !c.includes(searchTerm)) return false;
       }
-      if(currentFilter === "public"){
-        return Array.isArray(p.resources) && p.resources.some(r => r.access === "public");
+
+      // فلتر الحالة
+      if (currentFilter === "public") {
+        // منتجات مجانية / مفتوحة
+        return !p.accessVip;
       }
-      if(currentFilter === "vip"){
-        return Array.isArray(p.resources) && p.resources.some(r => r.access === "vip");
+      if (currentFilter === "vip") {
+        // منتجات VIP فقط
+        return !!p.accessVip;
       }
+
+      // الكل
       return true;
     });
 
@@ -1318,10 +1257,13 @@
     });
   }
 
+  // ===== بدء التشغيل (تسريع التحميل باستخدام Promise.all) =====
   (async function start(){
     await initUser();
-    await initVisitors();
-    await loadProducts();
+    await Promise.all([
+      initVisitors(),
+      loadProducts()
+    ]);
   })();
 </script>
 
