--- a/admin.html
+++ b/admin.html
@@ -147,7 +147,7 @@
     .card p{font-size:12px;color:var(--muted);margin-bottom:10px;}
 
     label{font-size:12px;color:var(--muted);display:block;margin-bottom:4px;}
-    input[type="text"], select{
+    input[type="text"], input[type="password"], select{
       width:100%;
       padding:7px 9px;
       border-radius:10px;
@@ -200,21 +200,21 @@
       gap:6px;
       align-items:center;
     }
-    .tag{
-      display:inline-flex;
-      align-items:center;
-      gap:4px;
-      padding:2px 6px;
-      border-radius:999px;
-      font-size:11px;
-      border:1px solid var(--border);
-      color:var(--muted);
-      margin-top:2px;
-    }
-    .tag.vip{border-color:var(--accent3);color:var(--accent3);}
     .status-msg{font-size:12px;margin-top:6px;}
     .status-ok{color:var(--success);}
     .status-err{color:#fecaca;}
+
+    .toggle-row{
+      display:flex;
+      align-items:center;
+      gap:8px;
+      margin-bottom:8px;
+      font-size:13px;
+    }
+    .toggle-row input[type="checkbox"]{
+      width:18px;
+      height:18px;
+    }
   </style>
 </head>
 
@@ -255,8 +255,10 @@
   <section id="adminApp">
     <div class="tabs">
       <button class="tab-btn active" data-tab="addProduct"><i class="fa-solid fa-plus"></i> إضافة منتج</button>
+      <button class="tab-btn" data-tab="editProduct"><i class="fa-solid fa-pen-to-square"></i> تعديل منتج</button>
       <button class="tab-btn" data-tab="deleteProduct"><i class="fa-solid fa-trash"></i> حذف منتج</button>
       <button class="tab-btn" data-tab="vipUsers"><i class="fa-solid fa-crown"></i> تفعيل حساب VIP</button>
+      <button class="tab-btn" data-tab="welcomeCfg"><i class="fa-solid fa-bullhorn"></i> إعداد إعلان الترحيب</button>
     </div>
 
     <!-- إضافة منتج -->
@@ -270,15 +272,8 @@
       <label>رابط صورة المنتج (1:1)</label>
       <input type="text" id="pImage" placeholder="رابط صورة مربعة للكورس">
 
-      <!-- التعديل هنا: بدل input صار select -->
-      <label>التصنيف (نوع المنتج)</label>
-      <select id="pCategory">
-        <option value="course" selected>كورس تعليمي</option>
-        <option value="app">تطبيق / برنامج</option>
-        <option value="tool">أداة تكنولوجية</option>
-        <option value="script">سكربت / كود جاهز</option>
-        <option value="template">قالب / تصميم</option>
-      </select>
+      <label>التصنيف</label>
+      <input type="text" id="pCategory" value="course">
 
       <div style="margin:6px 0 4px;font-size:12px;font-weight:600;">روابط المحتوى (عدد لا نهائي)</div>
       <p class="small">كل سطر = حقل داخل صفحة الكورس (عنوان + رابط + نوع: مفتوح للجميع / VIP للمشترك فقط).</p>
@@ -294,6 +289,44 @@
         </button>
       </div>
       <div id="addStatus" class="status-msg"></div>
+    </div>
+
+    <!-- تعديل منتج -->
+    <div class="card tab-panel" id="tab-editProduct" style="display:none;">
+      <h2><i class="fa-solid fa-pen-to-square"></i> تعديل منتج موجود</h2>
+      <p>أدخل ID المنتج واضغط "تحميل" لجلب البيانات، ثم عدّل و اضغط "حفظ التعديلات".</p>
+
+      <label>ID المنتج</label>
+      <input type="text" id="editId" placeholder="مثال: 1">
+      <button class="btn btn-outline" id="loadProductBtn">
+        <i class="fa-solid fa-download"></i> تحميل بيانات المنتج
+      </button>
+
+      <hr style="border:none;border-top:1px solid rgba(55,65,81,0.8);margin:10px 0;">
+
+      <label>اسم المنتج</label>
+      <input type="text" id="editName" placeholder="اسم المنتج">
+
+      <label>رابط صورة المنتج (1:1)</label>
+      <input type="text" id="editImage" placeholder="رابط صورة مربعة">
+
+      <label>التصنيف</label>
+      <input type="text" id="editCategory" placeholder="مثال: course / app / script">
+
+      <div style="margin:6px 0 4px;font-size:12px;font-weight:600;">روابط المحتوى</div>
+      <p class="small">يمكنك تعديل العناوين والروابط ونوع الوصول لكل حقل.</p>
+
+      <div class="resources-list" id="editResourcesList"></div>
+      <button class="btn btn-outline" id="editAddResourceBtn">
+        <i class="fa-solid fa-link"></i> إضافة رابط جديد
+      </button>
+
+      <div style="margin-top:10px;">
+        <button class="btn btn-primary" id="saveEditBtn">
+          <i class="fa-solid fa-save"></i> حفظ التعديلات
+        </button>
+      </div>
+      <div id="editStatus" class="status-msg"></div>
     </div>
 
     <!-- حذف منتج -->
@@ -331,6 +364,31 @@
       <div class="small" style="margin-top:8px;">
         المتجر يقرأ من Collection باسم <strong>users</strong>  
         ويعتمد الحقول: <code>isVip</code> و <code>vipUntil</code>.
+      </div>
+    </div>
+
+    <!-- إعداد إعلان الترحيب -->
+    <div class="card tab-panel" id="tab-welcomeCfg" style="display:none;">
+      <h2><i class="fa-solid fa-bullhorn"></i> إعداد إعلان الترحيب</h2>
+      <p>هذا الإعلان يظهر للمستخدم أول ما يفتح المتجر، ويمكن تخطيه بزر (تخطي).</p>
+
+      <div class="toggle-row">
+        <input type="checkbox" id="welcomeEnabled">
+        <label for="welcomeEnabled">تفعيل إعلان الترحيب</label>
+      </div>
+
+      <label>نص الإعلان</label>
+      <textarea id="welcomeText" placeholder="اكتب الرسالة التي تريد عرضها للمستخدمين..."></textarea>
+
+      <button class="btn btn-primary" id="saveWelcomeBtn">
+        <i class="fa-solid fa-floppy-disk"></i> حفظ إعدادات الإعلان
+      </button>
+
+      <div id="welcomeStatus" class="status-msg"></div>
+
+      <div class="small" style="margin-top:8px;">
+        يتم الحفظ في Collection باسم <strong>config</strong> و Document باسم <strong>store</strong>  
+        بنفس الحقول: <code>welcomeEnabled</code> و <code>welcomeText</code>.
       </div>
     </div>
   </section>
@@ -397,6 +455,7 @@
       adminStatus.textContent = "مسجل دخول كأدمن";
       logoutBtn.style.display = "inline-flex";
       loginError.textContent = "";
+      initAdmin();
     }else{
       loginError.textContent = "كلمة السر غير صحيحة.";
     }
@@ -419,10 +478,11 @@
       adminApp.style.display = "block";
       adminStatus.textContent = "مسجل دخول كأدمن";
       logoutBtn.style.display = "inline-flex";
+      initAdmin();
     }
   })();
 
-  // ====== إضافة منتج ======
+  // ====== عناصر إضافة منتج ======
   const resourcesList   = document.getElementById("resourcesList");
   const addResourceBtn  = document.getElementById("addResourceBtn");
   const saveProductBtn  = document.getElementById("saveProductBtn");
@@ -444,7 +504,7 @@
 
   addResourceBtn.addEventListener("click", ()=>addResourceRow());
 
-  // سطر واحد افتراضي
+  // سطر افتراضي يظهر دائماً
   addResourceRow();
 
   async function getNextProductId(){
@@ -513,6 +573,137 @@
     }
   });
 
+  // ====== عناصر تعديل منتج ======
+  const editIdInput        = document.getElementById("editId");
+  const loadProductBtn     = document.getElementById("loadProductBtn");
+  const editNameInput      = document.getElementById("editName");
+  const editImageInput     = document.getElementById("editImage");
+  const editCategoryInput  = document.getElementById("editCategory");
+  const editResourcesList  = document.getElementById("editResourcesList");
+  const editAddResourceBtn = document.getElementById("editAddResourceBtn");
+  const saveEditBtn        = document.getElementById("saveEditBtn");
+  const editStatus         = document.getElementById("editStatus");
+
+  function addEditResourceRow(title="", url="", access="public"){
+    const row = document.createElement("div");
+    row.className = "resource-row";
+    row.innerHTML = `
+      <input type="text" placeholder="عنوان الرابط" value="${title}">
+      <input type="text" placeholder="رابط (فيديو / ملف / صفحة)" value="${url}">
+      <select>
+        <option value="public" ${access==="public"?"selected":""}>مفتوح</option>
+        <option value="vip" ${access==="vip"?"selected":""}>VIP</option>
+      </select>
+    `;
+    editResourcesList.appendChild(row);
+  }
+
+  editAddResourceBtn.addEventListener("click", ()=>addEditResourceRow());
+
+  // سطر افتراضي بقسم التعديل
+  addEditResourceRow();
+
+  loadProductBtn.addEventListener("click", async ()=>{
+    const id = editIdInput.value.trim();
+    if(!id){
+      editStatus.textContent = "اكتب ID المنتج أولاً.";
+      editStatus.className = "status-msg status-err";
+      return;
+    }
+    try{
+      const ref = db.collection("products").doc(String(id));
+      const snap = await ref.get();
+      if(!snap.exists){
+        editStatus.textContent = "لم يتم العثور على منتج بهذا ID.";
+        editStatus.className = "status-msg status-err";
+        return;
+      }
+      const data = snap.data();
+      editNameInput.value     = data.title || "";
+      editImageInput.value    = data.image || "";
+      editCategoryInput.value = data.category || "";
+
+      editResourcesList.innerHTML = "";
+      if(Array.isArray(data.resources) && data.resources.length){
+        data.resources.forEach(r=>{
+          addEditResourceRow(r.title || "", r.url || "", r.access || "public");
+        });
+      }else{
+        addEditResourceRow();
+      }
+
+      editStatus.textContent = "تم تحميل بيانات المنتج. عدل ثم احفظ.";
+      editStatus.className   = "status-msg status-ok";
+    }catch(err){
+      console.error(err);
+      editStatus.textContent = "خطأ أثناء تحميل المنتج.";
+      editStatus.className = "status-msg status-err";
+    }
+  });
+
+  saveEditBtn.addEventListener("click", async ()=>{
+    const id = editIdInput.value.trim();
+    if(!id){
+      editStatus.textContent = "اكتب ID المنتج.";
+      editStatus.className = "status-msg status-err";
+      return;
+    }
+    const title    = editNameInput.value.trim();
+    const image    = editImageInput.value.trim();
+    const category = editCategoryInput.value.trim() || "course";
+
+    if(!title){
+      editStatus.textContent = "اسم المنتج مطلوب.";
+      editStatus.className = "status-msg status-err";
+      return;
+    }
+
+    const rows = editResourcesList.querySelectorAll(".resource-row");
+    const resources = [];
+    rows.forEach(row=>{
+      const [tInput,uInput,sel] = row.querySelectorAll("input,select");
+      const t = tInput.value.trim();
+      const u = uInput.value.trim();
+      const a = sel.value;
+      if(t && u){
+        resources.push({title:t,url:u,access:a});
+      }
+    });
+
+    if(!resources.length){
+      editStatus.textContent = "أضف على الأقل رابط واحد.";
+      editStatus.className = "status-msg status-err";
+      return;
+    }
+
+    const accessVip = resources.some(r=>r.access==="vip");
+
+    try{
+      const ref  = db.collection("products").doc(String(id));
+      const snap = await ref.get();
+      const old  = snap.exists ? snap.data() : {};
+
+      await ref.set({
+        id: Number(id),
+        title,
+        image,
+        category,
+        resources,
+        accessVip,
+        ratingSum:  typeof old.ratingSum  === "number" ? old.ratingSum  : 0,
+        ratingCount:typeof old.ratingCount=== "number" ? old.ratingCount: 0,
+        createdAt: old.createdAt || new Date().toISOString()
+      }, {merge:true});
+
+      editStatus.textContent = "تم حفظ التعديلات بنجاح.";
+      editStatus.className   = "status-msg status-ok";
+    }catch(err){
+      console.error(err);
+      editStatus.textContent = "خطأ أثناء حفظ التعديل.";
+      editStatus.className = "status-msg status-err";
+    }
+  });
+
   // ====== حذف منتج ======
   const delIdInput    = document.getElementById("delId");
   const deleteBtn     = document.getElementById("deleteProductBtn");
@@ -569,6 +760,61 @@
       vipStatus.className = "status-msg status-err";
     }
   });
+
+  // ====== إعداد إعلان الترحيب ======
+  const welcomeEnabledInput = document.getElementById("welcomeEnabled");
+  const welcomeTextInput    = document.getElementById("welcomeText");
+  const saveWelcomeBtn      = document.getElementById("saveWelcomeBtn");
+  const welcomeStatus       = document.getElementById("welcomeStatus");
+
+  async function loadWelcomeConfig(){
+    try{
+      const ref  = db.collection("config").doc("store");
+      const snap = await ref.get();
+      if(!snap.exists){
+        welcomeEnabledInput.checked = false;
+        welcomeTextInput.value      = "";
+        return;
+      }
+      const data = snap.data();
+      welcomeEnabledInput.checked = !!data.welcomeEnabled;
+      welcomeTextInput.value      = data.welcomeText || "";
+    }catch(err){
+      console.error(err);
+      welcomeStatus.textContent = "تعذر تحميل إعداد الإعلان.";
+      welcomeStatus.className   = "status-msg status-err";
+    }
+  }
+
+  saveWelcomeBtn.addEventListener("click", async ()=>{
+    const enabled = welcomeEnabledInput.checked;
+    const text    = welcomeTextInput.value.trim();
+
+    if(enabled && !text){
+      welcomeStatus.textContent = "اكتب نص الإعلان قبل التفعيل.";
+      welcomeStatus.className   = "status-msg status-err";
+      return;
+    }
+    try{
+      await db.collection("config").doc("store").set({
+        welcomeEnabled: enabled,
+        welcomeText: text
+      }, {merge:true});
+
+      welcomeStatus.textContent = "تم حفظ إعدادات الإعلان.";
+      welcomeStatus.className   = "status-msg status-ok";
+    }catch(err){
+      console.error(err);
+      welcomeStatus.textContent = "خطأ أثناء حفظ الإعدادات.";
+      welcomeStatus.className   = "status-msg status-err";
+    }
+  });
+
+  // ====== تهيئة واجهة الأدمن بعد تسجيل الدخول ======
+  function initAdmin(){
+    // تحميل إعداد إعلان الترحيب
+    loadWelcomeConfig();
+  }
 </script>
 
 </body>
